--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} 
+{% extends "base.html" %} 
+
+{% block title %}Home{% endblock %} 
 
 {% block content%}
 <h1>Welcome to the FMS Dashboard</h1>
